done by Ilya Krasavin

--- a/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
+++ b/2.2.2. spring_mvc/src/webapp/WEB-INF/pages/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div>
+    <a href="/spring_mvc_war_exploded/cars">NEXT PAGE</a>
+    <a href="/spring_mvc_war_exploded/cars?locale=ru">Русский</a>
+    <a href="/spring_mvc_war_exploded/cars?locale=en">English</a>
     <th:block th:each="msg : ${messages}">
         <h1 th:text="${msg}"></h1>
     </th:block>
